Agregamos video, titulo y seccion de numeros (Sin terminar)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Ezequiel Molina</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="videoMain">
+        <video src="vid/istockphoto-1432336761-640_adpp_is.mp4" autoplay muted loop></video>
+    </div>
+    <main class="title">
+        <h1>Ezequiel Molina</h1>
+    </main>
+    <div class="secondHeader">
+        <h2>Creamos contenido de calidad</h2>
+    </div>
+    <div class="principalContenedor">
+        <div class="principalNumeros">
+            <div class="numeros">
+                <h2>01</h2>
+            </div>
+            <div>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio repellat dicta modi aliquid.</p>
+            </div>
+        </div>
+        <div class="principalNumeros">
+            <div class="numeros">
+                <h2>02</h2>
+            </div>
+            <div>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio repellat dicta modi aliquid.</p>
+            </div>
+        </div>
+        <div class="principalNumeros">
+            <div class="numeros">
+                <h2>03</h2>
+            </div>
+            <div>
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio repellat dicta modi aliquid.</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
