--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ojuju:wght@200..800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="videoMain">
         <video src="vid/istockphoto-1432336761-640_adpp_is.mp4" autoplay muted loop></video>
@@ -27,7 +31,8 @@
             </div>
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio repellat dicta modi aliquid.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio
+                    repellat dicta modi aliquid.</p>
             </div>
         </div>
         <div class="principalNumeros">
@@ -36,7 +41,8 @@
             </div>
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio repellat dicta modi aliquid.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio
+                    repellat dicta modi aliquid.</p>
             </div>
         </div>
         <div class="principalNumeros">
@@ -45,10 +51,79 @@
             </div>
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio repellat dicta modi aliquid.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ad. Sunt ab ea maxime fugit optio
+                    repellat dicta modi aliquid.</p>
             </div>
         </div>
     </div>
-    
+    <div class="videoBody">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tlE_G2E8Pro?si=lqcB1jESa2sqRsdI"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+    </div>
+    <div class="proyectos">
+        <h3>Mis proyectos</h3>
+    </div>
+    <div class="proyectosGrid">
+        <div class="proyectosCard">
+            <img src="img/kratos.webp" alt="kratos">
+            <div class="proyectosInfo">
+                <h2>kratos</h2>
+                <p>Dios de la guerra</p>
+                <p class="proyectosDescripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, quae.
+                </p>
+            </div>
+        </div>
+        <div class="proyectosCard">
+            <img src="img/brok.webp" alt="Brok">
+            <div class="proyectosInfo">
+                <h2>Brok</h2>
+                <p>Elfo Herrero</p>
+                <p class="proyectosDescripcion">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate,
+                    quo.</p>
+            </div>
+        </div>
+        <div class="proyectosCard">
+            <img src="img/freya.webp" alt="Freya">
+            <div class="proyectosInfo">
+                <h2>Freya</h2>
+                <p>Bruja</p>
+                <p class="proyectosDescripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, magni.
+                </p>
+            </div>
+        </div>
+        <div class="proyectosCard">
+            <img src="img/mimir.jpg" alt="Mimir">
+            <div class="proyectosInfo">
+                <h2>Mimir</h2>
+                <p>Cabeza Parlante</p>
+                <p class="proyectosDescripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam,
+                    dolorem!</p>
+            </div>
+        </div>
+        <div class="proyectosCard">
+            <img src="img/thor.webp" alt="Thor">
+            <div class="proyectosInfo">
+                <h2>Thor</h2>
+                <p>Dios del trueno</p>
+                <p class="proyectosDescripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, commodi?
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="redes-sociales">
+            <a href="https://instagram.com"><img src="img/instagram.png" alt="Instagram"></a>
+            <a href="https://facebook.com"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://linkedin.com"><img src="img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 Mi Empresa. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
